Stockage des arrêtes du Graphe & Meilleure gestion de la mémoire paratagée entre Threads